k8s/deployment.yaml
# ============================================================
# PostgreSQL Deployment
# ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: docker.io/library/postgres:13.1
          ports:
            - containerPort: 5432

---
# ============================================================
# PostgreSQL Service
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector:
    app: postgre
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP

---
# ============================================================
# Aplicação ReviewFilmes Deployment
# ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewfilmes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviewfilmes
  template:
    metadata:
      labels:
        app: reviewfilmes
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: reviewfilmes
          image: gru.ocir.io/grglog7bpvjm/projeto-devops-pro:latest
          ports:
            - containerPort: 8080

---
# ============================================================
# Service da aplicação
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: reviewfilmes
spec:
  selector:
    app: reviewfilmes
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
