k8s/oci-ingress.yaml
# ============================================================
# OCI Native Ingress  - Class
# ============================================================
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: reviewfilmes-oci
spec:
  controller: oci.oraclecloud.com/native-ingress-controller
  parameters:
    scope: Namespace
    namespace: homologacao
    apiGroup: ingress.oraclecloud.com
    kind: IngressClassParameters
    name: reviewfilmes-ingress-params

---
# ============================================================
# ReviewFilmes Ingress
# ============================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewfilmes
  namespace: homologacao
  annotations: 
    oci.oraclecloud.com/load-balancer-type: "lb"
spec:
  ingressClassName: reviewfilmes-oci
  rules:
    - host: homologacao.ajotainformaticacloud.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reviewfilmes
                port:
                  number: 80
